Editing the FAQ section

--- a/sections/faq-accordian.liquid
+++ b/sections/faq-accordian.liquid
@@ -1,4 +1,5 @@
-<section class="accordion">
+<section>
+<div class="accordion">
 	<div class="item">
 		<p class="number">01</p>
 		<p class="text">How long do I have to return my chair?</p>
@@ -56,6 +57,7 @@
 			</ul>
 		</div>
 	</div>
+</div>
 </section>
 
 {% schema %}
