--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -174,6 +174,7 @@
       {% if template == 'index' %}
         {% section 'static-slideshow' %}
       {% endif %}
+      {% section 'faq-accordian' %}
       {{ content_for_layout }}
     </main>
 
