testing the blocks for faq

--- a/sections/dynamic-image-with-text.liquid
+++ b/sections/dynamic-image-with-text.liquid
@@ -1,4 +1,4 @@
-{% include 'image-with-text' %}
+{% render 'image-with-text' %}
 
 {% schema %}
 {
@@ -369,5 +369,4 @@
     "page"
   ]
 }
-
 {% endschema %}
