--- a/sections/faq-accordian.liquid
+++ b/sections/faq-accordian.liquid
@@ -1,152 +1,26 @@
-<section>
-<div class="accordion">
-	<div class="item">
-		<p class="number">01</p>
-		<p class="text">How long do I have to return my chair?</p>
-		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-		</svg>
-		<div class="hidden-box">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-				dolor, molestiae maiores accusantium consequuntur labore!
-			</p>
-			<ul>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-			</ul>
-		</div>
-	</div>
-	<div class="item open">
-		<p class="number">02</p>
-		<p class="text">How long do I have to return my chair?</p>
-		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-		</svg>
-		<div class="hidden-box">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-				dolor, molestiae maiores accusantium consequuntur labore!
-			</p>
-			<ul>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-			</ul>
-		</div>
-	</div>
-	<div class="item">
-		<p class="number">03</p>
-		<p class="text">How long do I have to return my chair?</p>
-		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-		</svg>
-		<div class="hidden-box">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-				dolor, molestiae maiores accusantium consequuntur labore!
-			</p>
-			<ul>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-			</ul>
-		</div>
-	</div>
-</div>
-</section>
+{% render 'faq' %}
 
 {% schema %}
 {
-"name": "FAQ Accordian",
-"settings": [],
-"presets": [
-{
-"name": "FAQ Accordian",
-"category": "Accoridan"
-}
-]
+	"name": "FAQ Accordian",
+	"settings": [],
+	"blocks":[{ "name": "Faq", "type": "faq"}],
+	"presets": [
+    {
+      "category": "Faq",
+      "name": "FAQ Accordian",
+      "blocks": [
+        {
+          "type": "faq"
+        },
+        {
+          "type": "faq"
+        }
+      ]
+    }
+  ]
 }
 {% endschema %}
-{% stylesheet %}
-.faq-accordion{
-font-family: "Inter", sans-serif;
-	line-height: 1;}
-
-.accordion {
-	max-width: 700px;
-	margin: 100px auto;
-
-	display: flex;
-	flex-direction: column;
-	gap: 24px;
-}
-
-.accordion .item {
-	box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
-	padding: 24px;
-	cursor: pointer;
-	display: grid;
-	grid-template-columns: auto 1fr auto;
-	column-gap: 24px;
-	row-gap: 32px;
-	border-top: 4px solid transparent;
-	align-items: center;
-	transition: border-top 0.3s;
-}
-.accordion .item.open {
-	border-top: 4px solid #087f5b;
-}
-.accordion .item.open .hidden-box {
-	display: block;
-}
-.accordion .item.open .text {
-	color: #087f5b;
-}
-.accordion .number {
-	color: #ced4da;
-}
-.accordion .number,
-.accordion .text {
-	font-size: 24px;
-	font-weight: 500;
-}
-
-.accordion .item.open .text {
-	transition: color 0.3s;
-}
-.accordion .icon {
-	width: 24px;
-	height: 24px;
-	stroke: #087f5b;
-	transition: transform 0.5s ease-in;
-}
-.accordion .item.open .icon {
-	transform: rotate(180deg);
-}
-.accordion .hidden-box {
-	grid-column: 2;
-	display: none;
-	transition: display 0.5 ease-in;
-}
-.accordion .hidden-box p {
-	line-height: 1.6;
-	margin-bottom: 24px;
-}
-.accordion .hidden-box ul {
-	color: #868e96;
-	margin-left: 18px;
-
-	display: flex;
-	flex-direction: column;
-	gap: 12px;
-}
-
-{% endstylesheet %}
 {% javascript %}
 const items = document.querySelectorAll(".item");
 
