--- a/sections/faq-accordian.liquid
+++ b/sections/faq-accordian.liquid
@@ -3,6 +3,7 @@
 {% schema %}
 {
 	"name": "FAQ Accordian",
+  "class": "accoridan",
 	"settings": [],
 	"blocks":[{ "name": "Faq", "type": "faq"}],
 	"presets": [
@@ -21,12 +22,3 @@
   ]
 }
 {% endschema %}
-{% javascript %}
-const items = document.querySelectorAll(".item");
-
-		items.forEach((item) => {
-			item.addEventListener("click", () => {
-				item.classList.toggle("open");
-			});
-		});
-{% endjavascript %}
