--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -1,5 +1,7 @@
-{% style %}
-.faq-accordion{
+
+
+    {% style %}
+.accordion{
 font-family: "Inter", sans-serif;
 	line-height: 1;}
 
@@ -12,7 +14,7 @@ font-family: "Inter", sans-serif;
 	gap: 24px;
 }
 
-.accordion .item {
+.accordion .faq-item {
 	box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
 	padding: 24px;
 	cursor: pointer;
@@ -24,13 +26,13 @@ font-family: "Inter", sans-serif;
 	align-items: center;
 	transition: border-top 0.3s;
 }
-.accordion .item.open {
+.accordion .faq-item.open {
 	border-top: 4px solid #087f5b;
 }
-.accordion .item.open .hidden-box {
+.accordion .faq-item.open .hidden-box {
 	display: block;
 }
-.accordion .item.open .text {
+.accordion .faq-item.open .text {
 	color: #087f5b;
 }
 .accordion .number {
@@ -42,7 +44,7 @@ font-family: "Inter", sans-serif;
 	font-weight: 500;
 }
 
-.accordion .item.open .text {
+.accordion .faq-item.open .text {
 	transition: color 0.3s;
 }
 .accordion .icon {
@@ -51,7 +53,7 @@ font-family: "Inter", sans-serif;
 	stroke: #087f5b;
 	transition: transform 0.5s ease-in;
 }
-.accordion .item.open .icon {
+.accordion .faq-item.open .icon {
 	transform: rotate(180deg);
 }
 .accordion .hidden-box {
@@ -73,29 +75,12 @@ font-family: "Inter", sans-serif;
 }
 
 {% endstyle %}
-
 <section>
-{% for block in section.blocks %}
-<div class="accordion">
-	<div class="item">
-		<p class="text">How long do I have to return my chair?</p>
-		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-		</svg>
-		<div class="hidden-box">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-				dolor, molestiae maiores accusantium consequuntur labore!
-			</p>
-			<ul>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-			</ul>
-		</div>
-	</div>
-	<div class="item open">
+	{% for block in section.blocks %}
+
+    <div class="accoridan">
+
+	<div class="faq-item">
 		<p class="text">How long do I have to return my chair?</p>
 		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
