Revert "Testing the multiblocks adding"
This reverts commit 20c8d461dbbbf5bd08373142b33862178de2799c.

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -18617,3 +18617,76 @@ summary::after {
     transform: translateY(-50%) rotate(-90deg);
   }
 }
+
+.faq-accordion{
+font-family: "Inter", sans-serif;
+	line-height: 1;}
+
+.accordion {
+	max-width: 700px;
+	margin: 100px auto;
+
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+.accordion .item {
+	box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
+	padding: 24px;
+	cursor: pointer;
+	display: grid;
+	grid-template-columns: auto 1fr auto;
+	column-gap: 24px;
+	row-gap: 32px;
+	border-top: 4px solid transparent;
+	align-items: center;
+	transition: border-top 0.3s;
+}
+.accordion .item.open {
+	border-top: 4px solid #087f5b;
+}
+.accordion .item.open .hidden-box {
+	display: block;
+}
+.accordion .item.open .text {
+	color: #087f5b;
+}
+.accordion .number {
+	color: #ced4da;
+}
+.accordion .number,
+.accordion .text {
+	font-size: 24px;
+	font-weight: 500;
+}
+
+.accordion .item.open .text {
+	transition: color 0.3s;
+}
+.accordion .icon {
+	width: 24px;
+	height: 24px;
+	stroke: #087f5b;
+	transition: transform 0.5s ease-in;
+}
+.accordion .item.open .icon {
+	transform: rotate(180deg);
+}
+.accordion .hidden-box {
+	grid-column: 2;
+	display: none;
+	transition: display 0.5 ease-in;
+}
+.accordion .hidden-box p {
+	line-height: 1.6;
+	margin-bottom: 24px;
+}
+.accordion .hidden-box ul {
+	color: #868e96;
+	margin-left: 18px;
+
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
