--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -9,18 +9,17 @@ font-family: "Inter", sans-serif;
 
 	display: flex;
 	flex-direction: column;
-	gap: 24px;
+		border-top: 1px solid;
 }
 
 .accordion .item {
-	box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
 	padding: 24px;
 	cursor: pointer;
 	display: grid;
-	grid-template-columns: auto 1fr auto;
+	grid-template-columns: auto max-content;
 	column-gap: 24px;
 	row-gap: 32px;
-	border-top: 4px solid transparent;
+	border-bottom: 1px solid;
 	align-items: center;
 	transition: border-top 0.3s;
 }
@@ -36,11 +35,6 @@ font-family: "Inter", sans-serif;
 .accordion .number {
 	color: #ced4da;
 }
-.accordion .number,
-.accordion .text {
-	font-size: 24px;
-	font-weight: 500;
-}
 
 .accordion .item.open .text {
 	transition: color 0.3s;
@@ -55,7 +49,6 @@ font-family: "Inter", sans-serif;
 	transform: rotate(180deg);
 }
 .accordion .hidden-box {
-	grid-column: 2;
 	display: none;
 	transition: display 0.5 ease-in;
 }
@@ -71,46 +64,61 @@ font-family: "Inter", sans-serif;
 	flex-direction: column;
 	gap: 12px;
 }
+.accoridan .question-text {
+	margin: 0;
+	font-size: {{ section.settings.question_font_size }}
+	font-weight: {{ section.settings.question_font_weight }}
+}
+
+.accordian .answer-header {
+	font-size: {{ section.settings.answer_header_font_size }}
+	font-weight: {{ section.settings.answer_header_font_weight }}
+}
+
+.accordian .answer-body {
+	font-size: {{ section.settings.answer_body_font_size }}
+}
 
 {% endstyle %}
 
 <section>
 {% for block in section.blocks %}
+
 <div class="accordion">
 	<div class="item">
-		<p class="text">How long do I have to return my chair?</p>
+		{% if block.settings.question != blank %}
+		<h2 class="question-text">{{ block.settings.question }}</h2>
+		{% else %}
+		<h2 class="question-text">What is your Frequently Asked Question?</h2>
+		{% endif %}
 		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 		</svg>
 		<div class="hidden-box">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-				dolor, molestiae maiores accusantium consequuntur labore!
-			</p>
-			<ul>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-			</ul>
-		</div>
-	</div>
-	<div class="item open">
-		<p class="text">How long do I have to return my chair?</p>
-		<svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-		</svg>
-		<div class="hidden-box">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-				dolor, molestiae maiores accusantium consequuntur labore!
-			</p>
-			<ul>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-			</ul>
+			{% for block in section.blocks.settings %}
+			{% if block.settings.answer_header1 != blank %}
+			<h2 class="answer-header">{{ block.settings.answer_header1 }}</h2>
+			{% else %}
+			<h2 class="answer-header"> An answer to your question with H2 tag </h2>
+			{% endif %}
+			{% if block.settings.answer_body1 != blank %}
+			<p class="answer-body">{{ block.settings.answer_body1 }}</p>
+			{% else %}
+			<p class="answer-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			{% endif %}
+			{% if block.settings.answer_header2 != blank %}
+			<h2 class="answer-header">{{ block.settings.answer_header1 }}</h2>
+			{% endif %}
+			{% if block.settings.answer_body2 != blank %}
+			<p class="answer-body">{{ block.settings.answer_body2 }}</p>
+			{% endif %}
+			{% if block.settings.answer_header3 != blank %}
+			<h2 class="answer-header">{{ block.settings.answer_header1 }}</h2>
+			{% endif %}
+			{% if block.settings.answer_body3 != blank %}
+			<p class="answer-body">{{ block.settings.answer_body3 }}</p>
+			{% endif %}
+			{% endfor %}
 		</div>
 	</div>
 </div>
