Fixing errors with the font weight and size. Forgot semicolon in class defintions

--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -66,17 +66,17 @@ font-family: "Inter", sans-serif;
 }
 .accoridan .question-text {
 	margin: 0;
-	font-size: {{ section.settings.question_font_size }}
-	font-weight: {{ section.settings.question_font_weight }}
+	font-size: {{ section.settings.question_font_size }}px;
+	font-weight: {{ section.settings.question_font_weight }};
 }
 
 .accordian .answer-header {
-	font-size: {{ section.settings.answer_header_font_size }}
-	font-weight: {{ section.settings.answer_header_font_weight }}
+	font-size: {{ section.settings.answer_header_font_size }}px;
+	font-weight: {{ section.settings.answer_header_font_weight }};
 }
 
 .accordian .answer-body {
-	font-size: {{ section.settings.answer_body_font_size }}
+	font-size: {{ section.settings.answer_body_font_size }}px;
 }
 
 {% endstyle %}
