Fixed typo in the classname

--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -64,18 +64,18 @@ font-family: "Inter", sans-serif;
 	flex-direction: column;
 	gap: 12px;
 }
-.accoridan .question-text {
+.accordion .question-text {
 	margin: 0;
 	font-size: {{ section.settings.question_font_size }}px;
 	font-weight: {{ section.settings.question_font_weight }};
 }
 
-.accordian .answer-header {
+.accordion .answer-header {
 	font-size: {{ section.settings.answer_header_font_size }}px;
 	font-weight: {{ section.settings.answer_header_font_weight }};
 }
 
-.accordian .answer-body {
+.accordion .answer-body {
 	font-size: {{ section.settings.answer_body_font_size }}px;
 }
 
