Added more settings for the faq

--- a/sections/faq-accordian.liquid
+++ b/sections/faq-accordian.liquid
@@ -6,6 +6,26 @@
   "settings": [
     {
       "type": "range",
+      "id": "section_max_width",
+      "label": "Section Max Width",
+      "min": 0,
+      "max": 1200,
+      "step": 100,
+      "unit": "px",
+      "default": 700
+    },
+    {
+      "type": "range",
+      "id": "section_margin",
+      "label": "Section Margin",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 20
+    },
+    {
+      "type": "range",
       "id": "question_font_size",
       "label": "Question Font Size",
       "min": 0,
@@ -44,6 +64,26 @@
     },
     {
       "type": "range",
+      "id": "answer_header_margin_top",
+      "label": "Answer Header Margin Top",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 0
+    },
+     {
+      "type": "range",
+      "id": "answer_header_margin_bottom",
+      "label": "Answer Header Margin Bottom",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 0
+    },
+    {
+      "type": "range",
       "id": "answer_body_font_size",
       "label": "Answer Body Font Size",
       "min": 0,
@@ -51,6 +91,26 @@
       "step": 1,
       "unit": "px",
       "default": 14
+    },
+    {
+      "type": "range",
+      "id": "answer_body_margin_top",
+      "label": "Answer Body Margin Top",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 0
+    },
+     {
+      "type": "range",
+      "id": "answer_body_margin_bottom",
+      "label": "Answer Body Margin Bottom",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 0
     }
   ],
   "blocks": [
