--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -1,6 +1,9 @@
 {% style %}
 .faq-accordion-section {
 	margin: {{ section.settings.section_margin }}px auto;
+	max-width: {{ section.settings.section_max_width }}px;
+	border-top: 1px solid;
+
 }
 
 .accordion {
@@ -8,7 +11,6 @@
 	margin: 0px auto;
 	display: flex;
 	flex-direction: column;
-	border-top: 1px solid;
 }
 
 .accordion .item {
