Added title and settings for the faq

--- a/sections/faq-accordian.liquid
+++ b/sections/faq-accordian.liquid
@@ -5,6 +5,40 @@
   "name": "FAQ Accordian",
   "settings": [
     {
+      "id": "section_title",
+      "type": "text",
+      "label": "FAQ Section Title"
+    },
+    {
+      "type": "range",
+      "id": "section_title_padding",
+      "label": "Title Padding",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 20
+    },
+    {
+      "type": "range",
+      "id": "title_font_size",
+      "label": "Title Font Size",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "px",
+      "default": 18
+    },
+    {
+      "type": "range",
+      "id": "title_font_weight",
+      "label": "Title Font Weight",
+      "min": 300,
+      "max": 800,
+      "step": 100,
+      "default": 700
+    },
+    {
       "type": "range",
       "id": "section_max_width",
       "label": "Section Max Width",
@@ -20,7 +54,7 @@
       "label": "Section Margin",
       "min": 0,
       "max": 1000,
-      "step": 1,
+      "step": 10,
       "unit": "px",
       "default": 20
     },
