--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -97,7 +97,7 @@
 {% endstyle %}
 
 <section class="faq-accordion-section">
-<span class="faq-section-title">Test title</span>
+<span class="faq-section-title">{{ section.settings.section_title }}</span>
 {% for block in section.blocks %}
 <div class="accordion">
 	<div class="item">
