Disabled the borders assigning for quickshop button

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -16719,16 +16719,16 @@ noscript .disclosure-list {
   .no-touch .product-row:not(.product-row--no-spacing) .productitem--action-trigger {
     border-radius: 0;
   }
-  .no-touch .product-row:not(.product-row--no-spacing) .productitem--action-trigger.productitem--action-qs {
-    border-right-color: {{ settings.color_buttons_secondary_button_background }};
+  /* .no-touch .product-row:not(.product-row--no-spacing) .productitem--action-trigger.productitem--action-qs {
     border-bottom-color: {{ settings.color_buttons_secondary_button_background }};
     border-left-color: {{ settings.color_buttons_secondary_button_background }};
+    border-right-color: {{ settings.color_buttons_secondary_button_background }};
   }
   .no-touch .product-row:not(.product-row--no-spacing) .productitem--action-trigger.productitem--action-qs:not(.disabled):hover {
-    border-right-color: {{ settings.color_buttons_secondary_button_background_hover }};
     border-bottom-color: {{ settings.color_buttons_secondary_button_background_hover }};
     border-left-color: {{ settings.color_buttons_secondary_button_background_hover }};
-  }
+    border-right-color: {{ settings.color_buttons_secondary_button_background_hover }};
+  } */
 }
 
 .productgrid--sidebar-item.filter-group {
