Changed layout of product page

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -12673,6 +12673,7 @@ em strong {
 .product--outer {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 719px) {
