Added class of product row and flex grow for top row

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -12684,6 +12684,12 @@ em strong {
   }
 }
 
+.product--outer .product-row {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+}
+
 .product-gallery,
 .product-form--alt,
 .product-main {
