--- a/snippets/product.liquid
+++ b/snippets/product.liquid
@@ -66,7 +66,7 @@
   {% comment %}
     Product slideshow, never moves
   {% endcomment %}
-  <div style="display: flex; flex-direction: row;">
+  <div class="product-row">
   {%
     include 'product-gallery',
     selected_image: selected_image,
@@ -268,7 +268,7 @@
 
   </div> {% comment %} end product-main {% endcomment %}
 </div>
-  <div style="display: flex; flex-direction: row;">
+  <div class="product-row">
 
 <div class="product-main">
     <div class="product-details" data-product-details>
