--- a/sections/related-products-by-tag.liquid
+++ b/sections/related-products-by-tag.liquid
@@ -1,146 +1,59 @@
-{% if section.settings.show_related_products == true %}
-<hr>
-<div class="product-template__container page-width" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true">
+{%- assign counter = 0 -%}
+{%- assign break_at = section.settings.number_of_products | plus: 0 -%}
+{%- assign current_product = product -%}
 
-{% comment %}
-  Number of related items per row,
-  and number of rows.
-{% endcomment %}
+{%- capture related_items -%}
+<section
+    class="product-section--container product-row--container product-recommendations--container"
+    data-html
+  >
+    {% if recommendations.products_count > 0 %}
+      <h2 class="product-section--title product-recommendations--title">
+        {{ section.settings.related_title }}
+      </h2>
 
-{% assign number_of_related_products_per_row = section.settings.related_grid_num %}
-{% assign number_of_rows = section.settings.related_grid_row %}
+      <ul
+        class="
+          product-section--content
+          product-row
+          {% if settings.enable_product_card_spacing == false %}product-row--no-spacing{% endif %}
+        "
+        data-product-row
+      >
+        {%- for product in collections.all.products -%}
+            {%- unless product.handle == current_product.handle -%}
 
-{% comment %}
-  Heading.
-  Leave blank if you don't need one.
-{% endcomment %}
+                {%- if product.tags contains section.settings.related_tag -%}
+                    {%
+                        include 'product-grid-item',
+                        product: product
+                    %}
 
-{% assign heading = section.settings.related_title %}
+                    {%- assign counter = counter | plus: 1 -%}
 
-{% comment %}
-  Set either or both to true, if you want
-  to limit yourself to items with same vendor, and/or type.
-{% endcomment %}
+                    {%- if counter == break_at -%}
+                    {%- break -%}
+                    {%- endif -%}
 
-{% assign same_vendor = false %}
-{% assign same_type = false %}
+                {%- endif -%}
 
-{% comment %}
-  Collections to ignore.
-  Never pick related items from those.
-{% endcomment %}
+            {%- endunless -%}
+        {%- endfor -%}
+        </ul>
+    {% endif %}
+</section>
+{%- endcapture -%}
 
-{% assign exclusions = 'frontpage,all' | split: ',' %}
+{%- assign related_items = related_items | trim -%}
+{%- unless related_items == blank -%}
+  <aside>
+    {%- if section.settings.heading -%}
+      <h2>{{ section.settings.heading }}</h2>
+    {%- endif -%}
 
-{% comment %}
-  Looking for a relevant collection.
-{% endcomment %}
-
-{% if product.metafields.c_f['Related Products'] %}
-  {% assign collection = collections[product.metafields.c_f['Related Products']] %}
-{% endif %}
-
-{% assign found_a_collection = false %}
-{% if collection and collection.all_products_count > 1 %}
-  {% unless exclusions contains collection.handle %}
-    {% assign found_a_collection = true %}
-  {% endunless %}
-{% endif %}
-{% unless found_a_collection %}
-  {% for c in product.collections %}
-    {% unless exclusions contains c.handle or c.all_products_count < 2 %}
-      {% assign found_a_collection = true %}
-      {% assign collection = c %}
-      {% break %}
-    {% endunless %}
-  {% endfor %}
-{% endunless %}
-
-{% comment %}
-  If we have a relevant collection.
-{% endcomment %}
-
-{% if found_a_collection %}
-
-  {% assign counter = 0 %}
-  {% assign break_at = number_of_rows | times: number_of_related_products_per_row %}
-  {% assign current_product = product %}
-
-  {% case number_of_related_products_per_row %}
-    {% when '1' %}
-      {% assign grid_item_width = '' %}
-        {%- assign max_height = 700 -%}
-    {% when '2' %}
-      {% assign grid_item_width = 'small--one-half medium-up--one-half' %}
-      {%- assign max_height = 530 -%}
-    {% when '3' %}
-      {% assign grid_item_width = 'small--one-half medium-up--one-third' %}
-      {%- assign max_height = 345 -%}
-    {% when '4' %}
-      {% assign grid_item_width = 'small--one-half medium-up--one-quarter' %}
-      {%- assign max_height = 250 -%}
-    {% when '5' %}
-      {% assign grid_item_width = 'small--one-half medium-up--one-fifth' %}
-      {%- assign max_height = 195 -%}
-    {% when '6' %}
-      {% assign grid_item_width = 'small--one-half medium-up--one-sixth' %}
-      {%- assign max_height = 195 -%}
-    {% else %}
-      {% assign grid_item_width = 'small--one-half medium-up--one-quarter' %}
-      {%- assign max_height = 195 -%}
-  {% endcase %}
-
-
-  {% capture related_items %}
-<div class="grid grid--uniform{% if collection.products_count > 0 %} grid--view-items{% endif %}">
-
-  {% for product in collections.all.products %}
-  {% unless product.handle == current_product.handle %}
-  {% unless same_vendor and current_product.vendor != product.vendor %}
-  {% unless same_type and current_product.type != product.type %}
-  {% comment %}
-    Replace 'test' below with prefered tag
-  {% endcomment %}
-  {% if product.tags contains  section.settings.related_tag %}
-  <div class="grid__item {{ grid_item_width }}">
-    {% include 'product-card-grid', max_height: max_height %}
-  </div>
-  {% assign counter = counter | plus: 1 %}
-  {% if counter == break_at %}
-  {% break %}
-  {% endif %}
-  {% endif %}
-  {% endunless %}
-  {% endunless %}
-  {% endunless %}
-  {% endfor %}
-
-</div>
-  {% endcapture %}
-
-  {% assign related_items = related_items | trim %}
-
-  {% unless related_items == blank %}
-
-  <aside class="grid">
-    <div class="grid__item">
-      {% unless heading == blank %}
-      <header class="section-header">
-        <h3>{{ heading }}</h3>
-      </header>
-      {% endunless %}
-      <div class="grid-uniform">
-        {{ related_items }}
-      </div>
-    </div>
+    {{ related_items }}
   </aside>
-
-  {% endunless %}
-
-{% endif %}
-
-</div>
-{% endif %}
+{%- endunless -%}
 
 {% schema %}
 {
@@ -160,7 +73,7 @@
     },
     {
       "type": "select",
-      "id": "related_grid_num",
+      "id": "number_of_products",
       "label": "Products per row (Desktop)",
       "default": "4",
       "options": [
@@ -179,26 +92,6 @@
         {
           "value": "5",
           "label": "5"
-        }
-      ]
-    },
-    {
-      "type": "select",
-      "id": "related_grid_row",
-      "label": "Number of rows (Desktop)",
-      "default": "1",
-      "options": [
-        {
-          "value": "1",
-          "label": "1"
-        },
-        {
-          "value": "2",
-          "label": "2"
-        },
-        {
-          "value": "3",
-          "label": "3"
         }
       ]
     },
