Changing how to loop over all products

--- a/sections/related-products-by-tag.liquid
+++ b/sections/related-products-by-tag.liquid
@@ -20,7 +20,7 @@
         "
         data-product-row
       >
-        {%- for product in collections.all.products -%}
+        {% for product in collections['all'].products %}
             {%- unless product.handle == current_product.handle -%}
 
                 {%- if product.tags contains section.settings.related_tag -%}
