Adding font awesome for truck on banner

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -138,7 +138,7 @@
       };
     </script>
     {% comment %}Inject theme-object end{% endcomment %}
-
+{{ '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' | stylesheet_tag }}
   </head>
 
   <body
