Updated faq to have an N/a for answer header

--- a/snippets/faq.liquid
+++ b/snippets/faq.liquid
@@ -112,6 +112,8 @@
 		<div class="hidden-box">
 			{% if block.settings.answer_header1 != blank %}
 			<h2 class="answer-header">{{ block.settings.answer_header1 }}</h2>
+			{% elsif block.settings.answer_header1 == "N/a" %}
+			<h2 class="answer-header"></h2>
 			{% else %}
 			<h2 class="answer-header"> An answer to your question with H2 tag </h2>
 			{% endif %}
